krakend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
  namespace: krakend-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: krakend
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: devopsfaith/krakend:2.4
        args: ["run", "-c", "/etc/krakend/krakend.json"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/krakend
      volumes:
      - name: config-volume
        configMap:
          name: krakend-config
---
apiVersion: v1
kind: Service
metadata:
  name: krakend
  namespace: krakend-test
spec:
  selector:
    app: krakend
  ports:
  - port: 8080
    targetPort: 8080
