server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
  namespace: krakend-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      containers:
      - name: ws-server
        image: ws-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ws-server
  namespace: krakend-test
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: ws-server
